# kdev-upload

./: .kde-ci.yml  .reviewboardrc  CMakeLists.txt  allprofilesmodel.cpp  allprofilesmodel.h  kcm_kdev_upload.desktop  kdevupload.desktop  kdevupload.desktop.cmake  kdevupload.json  kdevupload.qrc  kdevupload.rc  kdevuploaddebug.h  kdevuploadplugin.cpp  kdevuploadplugin.h  profilesfiletree.cpp  profilesfiletree.h  uploadconfig.kcfgc  uploaddialog.cpp  uploaddialog.h  uploadjob.cpp  uploadjob.h  uploadpreferences.cpp  uploadpreferences.h  uploadpreferences.ui  uploadprofiledlg.cpp  uploadprofiledlg.h  uploadprofiledlg.ui  uploadprofileitem.cpp  uploadprofileitem.h  uploadprofilemodel.cpp  uploadprofilemodel.h  uploadprojectmodel.cpp  uploadprojectmodel.h  version.h.cmake
po/ar/: kdevupload.po
po/bs/: kdevupload.po
po/ca/: kdevupload.po
po/ca@valencia/: kdevupload.po
po/cs/: kdevupload.po
po/da/: kdevupload.po
po/de/: kdevupload.po
po/en_GB/: kdevupload.po
po/eo/: kdevupload.po
po/es/: kdevupload.po
po/et/: kdevupload.po
po/eu/: kdevupload.po
po/fi/: kdevupload.po
po/fr/: kdevupload.po
po/ga/: kdevupload.po
po/gl/: kdevupload.po
po/he/: kdevupload.po
po/hu/: kdevupload.po
po/it/: kdevupload.po
po/ja/: kdevupload.po
po/ka/: kdevupload.po
po/ko/: kdevupload.po
po/lt/: kdevupload.po
po/mai/: kdevupload.po
po/mr/: kdevupload.po
po/nds/: kdevupload.po
po/nl/: kdevupload.po
po/nn/: kdevupload.po
po/pl/: kdevupload.po
po/pt/: kdevupload.po
po/pt_BR/: kdevupload.po
po/ru/: kdevupload.po
po/sk/: kdevupload.po
po/sl/: kdevupload.po
po/sv/: kdevupload.po
po/th/: kdevupload.po
po/tr/: kdevupload.po
po/ug/: kdevupload.po
po/uk/: kdevupload.po
po/zh_CN/: kdevupload.po
po/zh_TW/: kdevupload.po
tests/: CMakeLists.txt  permissions.cpp
